vlib/v/checker/tests/orm_using_undefined_var_in_where_err.vv
import time
import sqlite

struct User {
	id         int       [primary; sql: serial]
	created_at time.Time
	updated_at time.Time
	email      string
	password   string
	name       string
}

fn main() {
	db := sqlite.connect(':memory:')?
	sql db {
		create table User
	}
	m := User{}
	sql db {
		insert m into User
	}

	_ := sql db {
		select from User where email == email
	}
}
